# botcoins-db

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  core.rs  error.rs  lib.rs  server.rs
src/core/: db_serialization.rs  mod.rs  serde.rs  tests.rs
src/model/: mod.rs
